--- a/register.css
+++ b/register.css
@@ -87,6 +87,8 @@ button:hover {
     margin-bottom: 15px;
     text-align: center;
     border-radius: 4px;
+    background-color: #e8eeea;
+    color: #0e962b;
 }
 
 .error { background: #f8d7da; color: #721c24; }
